Fix [Input] placeholder is not aligned to center vertically (#2176)

--- a/src/common/Input/input.scss
+++ b/src/common/Input/input.scss
@@ -210,7 +210,7 @@
       top: 11px;
 
       &.input__label-floating {
-        top: 11px;
+        top: unset;
       }
 
       &.active-label {
@@ -230,7 +230,7 @@
       top: 17px;
 
       &.input__label-floating {
-        top: 17px;
+        top: unset;
       }
 
       &.active-label {
@@ -246,7 +246,7 @@
       top: 20px;
 
       &.input__label-floating {
-        top: 20px;
+        top: unset;
       }
 
       &.active-label {
